# decoding_multilingual_moral_preferences

./: .gitignore  language-clustering.drawio  pyproject.toml
data/: README.md  preprocess.py  reinforcement_prompts.json  system_prompts.json
data/preprocessed/: dataset_de.csv  dataset_en.csv  dataset_es.csv  dataset_fr.csv  dataset_ja.csv  dataset_kr.csv  dataset_pt.csv  dataset_zh.csv  preprocess.py
data/raw/: dataset_de.json  dataset_en.json  dataset_es.json  dataset_fr.json  dataset_ja.json  dataset_ko.json  dataset_pt.json  dataset_zh.json
experiments/results/: README.md
results/: README.md
results/cleansed/Llama-2-13b-chat-hf/: ko.json
results/cleansed/Llama-2-70b-chat-hf/: zh.json
results/cleansed/Meta-Llama-3-70B-Instruct/: ar.json  de.json  en.json  es.json  fr.json  (+5 more)
results/prepared/: Llama-2-13b-chat-hf.csv  falcon-40b-instruct.csv
results/prepared_for_fig3/: Meta-Llama-3-70B-Instruct.csv  Meta-Llama-3-8B-Instruct.csv  falcon-40b-instruct.csv  falcon-40b-instruct.csv.dropped  falcon-7b-instruct.csv  gemini-1.0-pro-001.csv  gpt-3.5-turbo-0125.csv  mme.csv  mpt-30b-chat.csv  mpt-7b-chat.csv
scripts/evaluation/: cost.py
scripts/experiments/: all.py  run.py
scripts/results/: cleanse.py  prepare.py  prepare_for_fig3  preprocess.py  validate.py
src/: agent.py  api_usage.py  experiment.py  main.py  moral_machine.py  noop.py  path_util.py  rate_limit.py  util.py
src/model/: __init__.py  dummy.py  dummy_model.py  google.py  hf.py  llama.py  llama3.py  mock.py  model.py  model_factory.py  mpt.py  openai.py  openai_model.py  transformers.py
(+3681 files in other folders)
