[tool.poetry]
name = "tinypaper"
version = "0.1.0"
description = ""
authors = ["Fabian Damken"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
markdownify = "^0.11.6"
tqdm = "^4.66.1"
openai = "^0.28.1"
pandas = "^2.1.2"
sacred = "^0.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
