[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
markdownify = "^0.11.6"
openai = "^1.13.3"
pandas = "^2.2.1"
python = "~3.11"
sacred = "^0.8.4"
tqdm = "^4.66.2"
tiktoken = "^0.6.0"
tenacity = "^8.2.3"
google-generativeai = "^0.4.1"
transformers = "^4.38.2"
accelerate = "^0.28.0"
einops = "^0.7.0"
matplotlib = "<3.8"
seaborn = "^0.13.2"
scipy = "^1.13.0"
tikzplotlib = "^0.10.1"
countryinfo = "^0.1.2"
selenium = "^4.26.1"
